--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ NEXTAUTH_URL=http://localhost:3000
 # @see https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=supersecret
 
-# Preconfigured Discord OAuth provider, works out-of-the-box
-# @see https://next-auth.js.org/providers/discord
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
+# GitHub OAuth provider
+# @see https://next-auth.js.org/providers/github
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
