--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,6 +17,11 @@
     "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
     "@acme/tailwind-config": "^0.1.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^6.0.6",
+    "@mantine/hooks": "^6.0.6",
+    "@mantine/next": "^6.0.6",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.19.1",
     "@trpc/next": "^10.19.1",
@@ -26,6 +31,7 @@
     "next-auth": "^4.21.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
