--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,11 +17,7 @@
     "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
     "@acme/tailwind-config": "^0.1.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/server": "^11.10.0",
-    "@mantine/core": "^6.0.7",
-    "@mantine/hooks": "^6.0.7",
-    "@mantine/next": "^6.0.7",
+    "@next/font": "^13.3.0",
     "@tanstack/react-query": "^4.29.3",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
@@ -31,7 +27,6 @@
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stylis-plugin-rtl": "^2.1.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
