--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -23,11 +23,16 @@
     "@trpc/next": "^10.20.0",
     "@trpc/react-query": "^10.20.0",
     "@trpc/server": "^10.20.0",
+    "class-variance-authority": "^0.5.2",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.162.0",
     "next": "^13.3.0",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
