--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,7 +17,8 @@
     "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
     "@acme/tailwind-config": "^0.1.0",
-    "@next/font": "^13.3.0",
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@tanstack/react-query": "^4.29.3",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.162.0",
     "next": "^13.3.0",
     "next-auth": "^4.22.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
