--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,14 +18,22 @@
     "@acme/db": "^0.1.0",
     "@acme/tailwind-config": "^0.1.0",
     "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.0.3",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-toast": "^1.1.3",
     "@tanstack/react-query": "^4.29.3",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
     "@trpc/react-query": "^10.20.0",
     "@trpc/server": "^10.20.0",
+    "@vercel/analytics": "^1.0.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.162.0",
     "next": "^13.3.0",
     "next-auth": "^4.22.0",
