--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,9 @@
 {
   "recommendations": [
-    "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "bradlc.vscode-tailwindcss",
-    "Prisma.prisma"
+    "esbenp.prettier-vscode",
+    "yoavbls.pretty-ts-errors",
+    "Prisma.prisma",
+    "bradlc.vscode-tailwindcss"
   ]
 }
