--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -33,9 +33,9 @@
     "superjson": "1.12.3"
   },
   "devDependencies": {
-    "@acme/api": "*",
-    "@acme/eslint-config": "*",
-    "@acme/tailwind-config": "*",
+    "@acme/api": "^0.1.0",
+    "@acme/eslint-config": "^0.1.0",
+    "@acme/tailwind-config": "^0.1.0",
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/runtime": "^7.21.5",
