--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,7 +16,7 @@
     "@acme/api": "^0.1.0",
     "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
-    "@acme/tailwind-config": "^0.1.0",
+    "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.27.1",
     "@trpc/next": "^10.27.1",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@acme/eslint-config": "^0.1.0",
+    "@acme/tailwind-config": "^0.1.0",
     "@types/node": "^18.16.13",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
