--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,9 @@
       "dependsOn": ["^build", "^db:generate"],
       "outputs": [".next/**", ".expo/**"]
     },
-    "lint": {},
+    "lint": {
+      "dependsOn": ["build"]
+    },
     "lint:fix": {},
     "clean": {
       "cache": false
