--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,11 @@
 # @see https://www.prisma.io/docs/reference/database-reference/connection-urls
 DATABASE_URL=file:./db.sqlite
 
-# @see https://next-auth.js.org/configuration/options#nextauth_url
-NEXTAUTH_URL=http://localhost:3000
+# Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 
-# You can generate the secret via 'openssl rand -base64 32' on Unix
-# @see https://next-auth.js.org/configuration/options#secret
-NEXTAUTH_SECRET=supersecret
-
-# GitHub OAuth provider
-# @see https://next-auth.js.org/providers/github
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/register
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
