--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -4,7 +4,7 @@
   "main": "index.tsx",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start --ios",
+    "dev": "expo start",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "lint": "eslint .",
@@ -12,8 +12,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.17.5",
     "@expo/metro-config": "^0.7.1",
-    "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.27.1",
     "@trpc/react-query": "^10.27.1",
@@ -24,6 +24,7 @@
     "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "^12.1.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
