--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "@acme/api": "^0.1.0",
-    "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
+    "@clerk/nextjs": "^4.18.4",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
@@ -37,7 +37,6 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.220.0",
     "next": "^13.4.3",
-    "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
