--- a/turbo.json
+++ b/turbo.json
@@ -33,12 +33,14 @@
   },
   "globalEnv": [
     "CI",
+    "CLERK_SECRET_KEY",
     "DATABASE_URL",
-    "GITHUB_CLIENT_ID",
-    "GITHUB_CLIENT_SECRET",
     "EXPO_ROUTER_APP_ROOT",
-    "NEXTAUTH_SECRET",
-    "NEXTAUTH_URL",
+    "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
+    "NEXT_PUBLIC_CLERK_SIGN_IN_URL",
+    "NEXT_PUBLIC_CLERK_SIGN_UP_URL",
+    "NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL",
+    "NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL",
     "NODE_ENV",
     "SKIP_ENV_VALIDATION",
     "VERCEL",
