Update Deps, Cache type-check, Expect ts-error

--- a/turbo.json
+++ b/turbo.json
@@ -28,7 +28,7 @@
     },
     "type-check": {
       "dependsOn": ["^db:generate"],
-      "cache": false
+      "cache": true
     }
   },
   "globalEnv": [
