Not So Bare Beginnings

--- a/turbo.json
+++ b/turbo.json
@@ -36,6 +36,8 @@
     "CLERK_SECRET_KEY",
     "DATABASE_URL",
     "EXPO_ROUTER_APP_ROOT",
+    "NEXTJS_APP_URL",
+    "NEXT_PUBLIC_APP_URL",
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
     "NEXT_PUBLIC_CLERK_SIGN_IN_URL",
     "NEXT_PUBLIC_CLERK_SIGN_UP_URL",
