Fix CI?, Update Deps, Sort Exports & Minor Updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Install deps (with cache)
         run: pnpm install
 
+      - run: cp .env.example .env.local
+
       # Normally, this would be done as part of the turbo pipeline - however since the Expo app doesn't depend on `@acme/db` it doesn't care.
       # TODO: Free for all to find a better solution here.
       - name: Generate Prisma Client
