--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@acme/expo",
   "version": "0.1.0",
+  "private": true,
   "main": "index.tsx",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
@@ -14,7 +15,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.18.12",
     "@expo/metro-config": "^0.10.6",
-    "@tanstack/react-query": "^4.29.23",
+    "@tanstack/react-query": "^4.29.25",
     "@trpc/client": "^10.34.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
@@ -50,5 +51,11 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
-  "private": true
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@acme/eslint-config/base",
+      "@acme/eslint-config/react"
+    ]
+  }
 }
