--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "clean:workspaces": "turbo clean",
     "db:generate": "turbo db:generate",
     "db:push": "turbo db:push db:generate",
+    "db:studio": "pnpm -F db dev",
     "dev": "turbo dev --parallel",
     "dev:expo": "turbo dev --parallel --filter !@acme/nextjs --filter !@acme/db",
     "dev:nextjs": "turbo dev --parallel --filter !@acme/expo --filter !@acme/db",
-    "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
+    "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,mdx,json}\" --ignore-path .gitignore",
+    "format:check": "prettier --check .",
     "lint": "turbo lint && manypkg check",
     "lint:fix": "turbo lint:fix && manypkg fix",
-    "type-check": "turbo type-check"
+    "typecheck": "turbo type-check"
   },
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@manypkg/cli": "^0.21.0",
-    "@types/prettier": "^2.7.3",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6"
