--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,8 @@ jobs:
       - name: Install deps (with cache)
         run: pnpm install
 
-      - run: cp .env.example .env.local
+      - name: Configure env vars
+        run: cp .env.example .env
 
       # Normally, this would be done as part of the turbo pipeline - however since the Expo app doesn't depend on `@acme/db` it doesn't care.
       # TODO: Free for all to find a better solution here.
