--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -26,14 +26,16 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@t3-oss/env-nextjs": "^0.6.0",
-    "@tanstack/react-query": "^4.29.23",
+    "@tanstack/react-query": "^4.29.25",
+    "@tanstack/react-query-devtools": "^4.29.25",
+    "@tanstack/react-query-next-experimental": "5.0.0-alpha.84",
     "@trpc/client": "^10.34.0",
     "@trpc/next": "^10.34.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
     "@vercel/analytics": "^1.0.1",
     "class-variance-authority": "^0.6.1",
-    "clsx": "^1.2.1",
+    "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.260.0",
     "next": "^13.4.10",
@@ -41,7 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.4",
-    "tailwind-merge": "^1.13.2",
+    "tailwind-merge": "^1.14.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -57,5 +59,13 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.1.6"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@acme/eslint-config/base",
+      "@acme/eslint-config/nextjs",
+      "@acme/eslint-config/react"
+    ]
   }
 }
