--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@acme/api": "^0.1.0",
     "@acme/db": "^0.1.0",
-    "@clerk/nextjs": "^4.22.1",
+    "@clerk/nextjs": "^4.23.1",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -26,19 +26,19 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@t3-oss/env-nextjs": "^0.6.0",
-    "@tanstack/react-query": "^4.29.25",
-    "@tanstack/react-query-devtools": "^4.29.25",
-    "@tanstack/react-query-next-experimental": "5.0.0-alpha.88",
-    "@trpc/client": "^10.35.0",
-    "@trpc/next": "^10.35.0",
-    "@trpc/react-query": "^10.35.0",
-    "@trpc/server": "^10.35.0",
+    "@tanstack/react-query": "^4.32.1",
+    "@tanstack/react-query-devtools": "^4.32.1",
+    "@tanstack/react-query-next-experimental": "5.0.0-beta.9",
+    "@trpc/client": "^10.36.0",
+    "@trpc/next": "^10.36.0",
+    "@trpc/react-query": "^10.36.0",
+    "@trpc/server": "^10.36.0",
     "@vercel/analytics": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "lucide-react": "^0.262.0",
-    "next": "^13.4.11",
+    "lucide-react": "^0.263.1",
+    "next": "^13.4.12",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -49,13 +49,13 @@
   "devDependencies": {
     "@acme/eslint-config": "^0.2.0",
     "@acme/tailwind-config": "^0.1.0",
-    "@types/node": "^18.16.19",
-    "@types/react": "^18.2.15",
+    "@types/node": "^18.17.1",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "dotenv-cli": "^7.2.1",
-    "eslint": "^8.45.0",
-    "postcss": "^8.4.26",
+    "eslint": "^8.46.0",
+    "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.1.6"
