--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,14 +8,13 @@
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint .",
     "lint:fix": "pnpm lint --fix",
-    "type-check": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@acme/db": "^0.1.0",
-    "@clerk/nextjs": "^4.23.1",
-    "@t3-oss/env-nextjs": "^0.6.0",
-    "@trpc/client": "^10.36.0",
-    "@trpc/server": "^10.36.0",
+    "@clerk/nextjs": "^4.23.2",
+    "@trpc/client": "^10.37.1",
+    "@trpc/server": "^10.37.1",
     "superjson": "1.13.1",
     "zod": "^3.21.4"
   },
