--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -10,40 +10,39 @@
     "dev:ios": "expo start --ios",
     "lint": "eslint .",
     "lint:fix": "pnpm lint --fix",
-    "type-check": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.18.16",
     "@expo/metro-config": "^0.10.7",
-    "@tanstack/react-query": "^4.32.1",
-    "@trpc/client": "^10.36.0",
-    "@trpc/react-query": "^10.36.0",
-    "@trpc/server": "^10.36.0",
-    "expo": "^49.0.6",
+    "@shopify/flash-list": "1.5.0",
+    "@tanstack/react-query": "^4.32.6",
+    "@trpc/client": "^10.37.1",
+    "@trpc/react-query": "^10.37.1",
+    "@trpc/server": "^10.37.1",
+    "expo": "^49.0.7",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-web-browser": "^12.3.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.7.1",
-    "react-native-screens": "~3.23.0",
+    "react-native-screens": "~3.24.0",
     "superjson": "1.13.1"
   },
   "devDependencies": {
     "@acme/api": "^0.1.0",
     "@acme/eslint-config": "^0.2.0",
     "@acme/tailwind-config": "^0.1.0",
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/runtime": "^7.22.6",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/runtime": "^7.22.10",
     "@expo/config-plugins": "^7.2.5",
     "@types/babel__core": "^7.20.1",
-    "@types/react": "^18.2.18",
+    "@types/react": "^18.2.20",
     "eslint": "^8.46.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
