--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -9,36 +9,28 @@
     "lint": "dotenv -v SKIP_ENV_VALIDATION=1 next lint",
     "lint:fix": "pnpm lint --fix",
     "start": "pnpm with-env next start",
-    "type-check": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@acme/api": "^0.1.0",
     "@acme/db": "^0.1.0",
-    "@clerk/nextjs": "^4.23.1",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.2",
+    "@clerk/nextjs": "^4.23.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@t3-oss/env-nextjs": "^0.6.0",
-    "@tanstack/react-query": "^4.32.1",
-    "@tanstack/react-query-devtools": "^4.32.1",
-    "@tanstack/react-query-next-experimental": "5.0.0-beta.9",
-    "@trpc/client": "^10.36.0",
-    "@trpc/next": "^10.36.0",
-    "@trpc/react-query": "^10.36.0",
-    "@trpc/server": "^10.36.0",
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
+    "@tanstack/react-query-next-experimental": "5.0.0-beta.15",
+    "@trpc/client": "^10.37.1",
+    "@trpc/next": "^10.37.1",
+    "@trpc/react-query": "^10.37.1",
+    "@trpc/server": "^10.37.1",
     "@vercel/analytics": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
     "lucide-react": "^0.263.1",
-    "next": "^13.4.12",
+    "next": "^13.4.13",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -49,8 +41,8 @@
   "devDependencies": {
     "@acme/eslint-config": "^0.2.0",
     "@acme/tailwind-config": "^0.1.0",
-    "@types/node": "^18.17.1",
-    "@types/react": "^18.2.18",
+    "@types/node": "^18.17.4",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "dotenv-cli": "^7.2.1",
