The Age of Prisma is over. The Time of Drizzle has come.
![Gothmog](https://static.wikia.nocookie.net/lotr/images/e/e1/Lieutenant_Gothmog.jpg/revision/latest?cb=20190210102106)
> The Age of ~~Men~~ Prisma is over. The Time of ~~the Orc~~ Drizzle has come.

--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "main": "index.tsx",
   "scripts": {
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "clean": "git clean -xdf .expo .turbo node_modules",
     "dev": "expo start",
     "dev:android": "expo start --android",
