--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,9 @@
 # This file will be committed to version control, so make sure not to have any secrets in it.
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
-# We use dotenv to load Prisma from Next.js' .env file
-# @see https://www.prisma.io/docs/reference/database-reference/connection-urls
-DATABASE_URL=file:./db.sqlite
+# The database URL is used to connect to the database
+DATABASE_URL="mysql://user:password@host/db?sslaccept=strict"
 
 # Clerk
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+CLERK_SECRET_KEY=""
