--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "turbo build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
-    "db:generate": "turbo db:generate",
-    "db:push": "turbo db:push db:generate",
+    "db:push": "pnpm -F db push",
     "db:studio": "pnpm -F db dev",
     "dev": "turbo dev --parallel",
     "dev:expo": "turbo dev --parallel --filter !@acme/nextjs --filter !@acme/db",
