--- a/apps/expo/tsconfig.json
+++ b/apps/expo/tsconfig.json
@@ -6,16 +6,9 @@
       "~/*": ["./src/*"]
     },
     "jsx": "react-native",
+    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
     "types": ["nativewind/types"]
   },
-  "include": [
-    "expo-plugins",
-    "src",
-    "*.ts",
-    "index.tsx",
-    "*.js",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ],
+  "include": [".", ".expo/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
