--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "@acme/db",
+  "name": "@acme/tailwind-config",
   "version": "0.1.0",
   "private": true,
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "main": "index.ts",
+  "files": [
+    "index.ts",
+    "postcss.js"
+  ],
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint .",
-    "push": "drizzle-kit push:mysql",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@planetscale/database": "^1.10.0",
-    "drizzle-orm": "^0.28.2"
+    "autoprefixer": "^10.4.15",
+    "postcss": "8.4.26",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@acme/eslint-config": "^0.2.0",
-    "dotenv-cli": "^7.2.1",
-    "drizzle-kit": "^0.19.12",
+    "eslint": "^8.47.0",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.1.6"
   },
   "eslintConfig": {
