--- a/turbo.json
+++ b/turbo.json
@@ -1,37 +1,41 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "globalDependencies": ["**/.env", "tsconfig.json"],
+  "globalDependencies": ["**/.env"],
   "pipeline": {
-    "dev": {
-      "persistent": true,
-      "cache": false
+    "topo": {
+      "dependsOn": ["^topo"]
     },
     "build": {
       "dependsOn": ["^build"],
       "outputs": [".expo/**", ".next/**", "!.next/cache/**", "next-env.d.ts"]
     },
-    "lint": {},
-    "lint:fix": {},
+    "dev": {
+      "persistent": true,
+      "cache": false
+    },
+    "lint": {
+      "dependsOn": ["^topo"],
+      "outputs": ["node_modules/.cache/.eslintcache"]
+    },
+    "typecheck": {
+      "dependsOn": ["^topo"],
+      "outputs": ["node_modules/.cache/tsbuildinfo.json"]
+    },
     "clean": {
       "cache": false
     },
     "//#clean": {
       "cache": false
-    },
-    "typecheck": {
-      "cache": true
     }
   },
   "globalEnv": [
     "CI",
     "CLERK_SECRET_KEY",
     "DATABASE_URL",
-    "EXPO_ROUTER_APP_ROOT",
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
     "NODE_ENV",
     "PORT",
     "SKIP_ENV_VALIDATION",
-    "VERCEL",
     "VERCEL_URL"
   ]
 }
