--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@
 # This file will be committed to version control, so make sure not to have any secrets in it.
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
-# The database URL is used to connect to the database
-DATABASE_URL="mysql://user:password@host/db?sslaccept=strict"
+# The database URL is used to connect to your PlanetScale database.
+# DATABASE_URL="mysql://USERNAME:pscale_pw_PASSWORD@aws.connect.psdb.cloud/DATABASE_NAME?ssl={"rejectUnauthorized":true}"
 
 # Clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
