--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -3,7 +3,7 @@
 
 name: 🛠 Feature Request
 description: Create a feature request for the core packages
-title: "Feat: "
+title: "feat: "
 labels: ["✨ enhancement"]
 body:
   - type: markdown
