--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,11 +45,8 @@ jobs:
       - name: Install deps (with cache)
         run: pnpm install
 
-      - name: Check formatting
-        run: pnpm format:check
-
       - name: Build, lint and typecheck
-        run: pnpm turbo build lint typecheck
+        run: pnpm turbo build lint format typecheck
 
       - name: Check workspaces
         run: pnpm manypkg check
