--- a/.npmrc
+++ b/.npmrc
@@ -3,7 +3,7 @@
 # @link https://docs.expo.dev/guides/monorepos/#common-issues
 node-linker=hoisted
 
-# Prevent pnpm from adding the "workspace:"" prefix to local
+# Prevent pnpm from adding the "workspace:" prefix to local
 # packages as it causes issues with manypkg
 # @link https://pnpm.io/npmrc#prefer-workspace-packages
 save-workspace-protocol=false
