--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -6,6 +6,7 @@
     "build": "pnpm with-env next build",
     "clean": "git clean -xdf .next .turbo node_modules",
     "dev": "pnpm with-env next dev",
+    "format": "prettier --check \"**/*.{js,cjs,mjs,ts,tsx,md,mdx,json}\"",
     "lint": "dotenv -v SKIP_ENV_VALIDATION=1 next lint",
     "start": "pnpm with-env next start",
     "typecheck": "tsc --noEmit",
@@ -46,12 +47,15 @@
   },
   "devDependencies": {
     "@acme/eslint-config": "^0.2.0",
+    "@acme/prettier-config": "^0.1.0",
     "@acme/tailwind-config": "^0.1.0",
+    "@acme/tsconfig": "^0.1.0",
     "@types/node": "^18.18.4",
     "@types/react": "^18.2.27",
     "@types/react-dom": "^18.2.12",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8.51.0",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
@@ -62,5 +66,6 @@
       "@acme/eslint-config/nextjs",
       "@acme/eslint-config/react"
     ]
-  }
+  },
+  "prettier": "@acme/prettier-config"
 }
