--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,6 +6,7 @@
   "types": "./index.ts",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
+    "format": "prettier --check \"**/*.{mjs,ts,md,json}\"",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
@@ -19,7 +20,10 @@
   },
   "devDependencies": {
     "@acme/eslint-config": "^0.2.0",
+    "@acme/prettier-config": "^0.1.0",
+    "@acme/tsconfig": "^0.1.0",
     "eslint": "^8.51.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "eslintConfig": {
@@ -27,5 +31,6 @@
     "extends": [
       "@acme/eslint-config/base"
     ]
-  }
+  },
+  "prettier": "@acme/prettier-config"
 }
