--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -2,7 +2,7 @@
   "name": "@acme/expo",
   "version": "0.1.0",
   "private": true,
-  "main": "index.tsx",
+  "main": "expo-router/entry",
   "scripts": {
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -17,31 +17,32 @@
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
     "@shopify/flash-list": "1.6.2",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.43.0",
-    "@trpc/react-query": "^10.43.0",
-    "@trpc/server": "^10.43.0",
+    "@tanstack/react-query": "^5.7.2",
+    "@trpc/client": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
     "expo": "^49.0.16",
     "expo-constants": "~15.2.0",
     "expo-linking": "~6.0.0",
     "expo-router": "2.0.10",
     "expo-splash-screen": "~0.22.0",
     "expo-status-bar": "~1.7.1",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.13.4",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.7.4",
     "react-native-screens": "~3.27.0",
     "superjson": "2.2.0"
   },
   "devDependencies": {
-    "@acme/api": "^0.1.0",
-    "@acme/eslint-config": "^0.2.0",
-    "@acme/prettier-config": "^0.1.0",
-    "@acme/tailwind-config": "^0.1.0",
-    "@acme/tsconfig": "^0.1.0",
+    "@acme/api": "workspace:^0.1.0",
+    "@acme/eslint-config": "workspace:^0.2.0",
+    "@acme/prettier-config": "workspace:^0.1.0",
+    "@acme/tailwind-config": "workspace:^0.1.0",
+    "@acme/tsconfig": "workspace:^0.1.0",
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/runtime": "^7.23.2",
