--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,17 +11,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/db": "^0.1.0",
+    "@acme/db": "workspace:^0.1.0",
     "@clerk/nextjs": "^4.26.1",
-    "@trpc/client": "^10.43.0",
-    "@trpc/server": "^10.43.0",
+    "@trpc/client": "next",
+    "@trpc/server": "next",
     "superjson": "2.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@acme/eslint-config": "^0.2.0",
-    "@acme/prettier-config": "^0.1.0",
-    "@acme/tsconfig": "^0.1.0",
+    "@acme/eslint-config": "workspace:^0.2.0",
+    "@acme/prettier-config": "workspace:^0.1.0",
+    "@acme/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.53.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
