--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.0.1",
-    "@types/eslint": "^8.44.6",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "eslint-config-prettier": "^9.0.0",
@@ -26,8 +25,9 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "devDependencies": {
-    "@acme/prettier-config": "^0.1.0",
-    "@acme/tsconfig": "^0.1.0",
+    "@acme/prettier-config": "workspace:^0.1.0",
+    "@acme/tsconfig": "workspace:^0.1.0",
+    "@types/eslint": "^8.44.6",
     "eslint": "^8.53.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
