--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # The database URL is used to connect to your PlanetScale database.
-# DATABASE_URL="mysql://USERNAME:pscale_pw_PASSWORD@aws.connect.psdb.cloud/DATABASE_NAME?ssl={"rejectUnauthorized":true}"
+DB_HOST="aws.connect.psdb.cloud"
+DB_NAME="YOUR_DB_NAME"
+DB_USERNAME=""
+DB_PASSWORD="pscale_pw_"
 
 # Clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
