--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -10,14 +10,14 @@
     "dev": "expo start",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
-    "format": "prettier --check \"**/*.{js,cjs,mjs,ts,tsx,md,json}\"",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
     "@shopify/flash-list": "1.6.3",
-    "@tanstack/react-query": "^5.14.2",
+    "@tanstack/react-query": "^5.14.6",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
@@ -59,6 +59,9 @@
     "extends": [
       "@acme/eslint-config/base",
       "@acme/eslint-config/react"
+    ],
+    "ignorePatterns": [
+      "expo-plugins/**"
     ]
   },
   "prettier": "@acme/prettier-config"
