--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -2,20 +2,19 @@
   "name": "@acme/tailwind-config",
   "version": "0.1.0",
   "private": true,
-  "main": "index.ts",
-  "files": [
-    "index.ts",
-    "postcss.js"
-  ],
+  "type": "module",
+  "exports": {
+    ".": "./index.ts"
+  },
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "format": "prettier --check \"**/*.{mjs,ts,md,json}\"",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
-    "postcss": "8.4.32",
+    "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
